First starts with cegui

--- a/client/src/gui/CMakeLists.txt
+++ b/client/src/gui/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(HDRS 
       chessGui.h
+      chessCegui.h
       )
  
 set(SRCS
+      chessCegui.cpp
       chessGui.cpp
 )
 
 add_library(ChessGui ${HDRS} ${SRCS})
-target_link_libraries(ChessGui ${SFML_LIBRARY})
+target_link_libraries(ChessGui ${SFML_LIBRARY} ${CEGUI_LIBRARY} CEGUIOpenGLRenderer.so)
