Server stuff added

--- a/client/src/gui/CMakeLists.txt
+++ b/client/src/gui/CMakeLists.txt
@@ -1,12 +1,14 @@
 set(HDRS 
       chessGui.h
       chessCegui.h
+      chessServer.h
       )
  
 set(SRCS
       chessCegui.cpp
       chessGui.cpp
+      chessServer.cpp
 )
 
 add_library(ChessGui ${HDRS} ${SRCS})
-target_link_libraries(ChessGui ${SFML_LIBRARY} ${CEGUI_LIBRARY} CEGUIOpenGLRenderer.so)
+target_link_libraries(ChessGui ${SFML_LIBRARY} ${CEGUI_LIBRARY} CEGUIOpenGLRenderer.so ${Boost_LIBRARIES})
