Check now added, checkmate then networking(Sh*t) needs to be done

--- a/client/src/cli/CMakeLists.txt
+++ b/client/src/cli/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SRCS
       chessCli.cpp
       generateMoves.cpp
       removeCastle.cpp
+      check.cpp
 )
 
 add_library(ChessCli ${HDRS} ${SRCS})
