About to add checkmate, so safety

--- a/client/src/cli/CMakeLists.txt
+++ b/client/src/cli/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRCS
       generateMoves.cpp
       removeCastle.cpp
       check.cpp
+      checkMate.cpp
 )
 
 add_library(ChessCli ${HDRS} ${SRCS})
