--- a/server/src/network/CMakeLists.txt
+++ b/server/src/network/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(HDRS 
       chessNetwork.h
+      chessConnection.h
       )
  
 set(SRCS
       chessNetwork.cpp
+      chessConnection.cpp
 )
 
 add_library(ChessNetwork ${HDRS} ${SRCS})
