--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -9,6 +9,6 @@ set(SRCS
 
 
 add_executable(ChessClient ${HDRS} ${SRCS})
-target_link_libraries(ChessClient ChessCli ChessGui)
+target_link_libraries(ChessClient ChessCli ChessGui ChessNet)
 
 add_subdirectory(src)
