--- a/client/src/cli/CMakeLists.txt
+++ b/client/src/cli/CMakeLists.txt
@@ -9,6 +9,10 @@ set(SRCS
       check.cpp
       checkMate.cpp
       addPieceMoves.cpp
+      processMessageSingle.cpp
+      processMessageConnected.cpp
+      boardClickedSingle.cpp
+      chessMoves.cpp
 )
 
 add_library(ChessCli ${HDRS} ${SRCS})
