Its working now

--- a/server/src/cli/CMakeLists.txt
+++ b/server/src/cli/CMakeLists.txt
@@ -9,6 +9,14 @@ set(SRCS
       check.cpp
       checkMate.cpp
       addPieceMoves.cpp
+      chessMoves.cpp
+
+      #      processMessageSingle.cpp
+#      processMessageConnected.cpp
+      processMessageServer.cpp
+
+      #      boardClickedSingle.cpp
+      boardClickedServer.cpp
 )
 
 add_library(ChessCli2 ${HDRS} ${SRCS})
