All moved to chess engine

--- a/client/.oldcli/cli/CMakeLists.txt
+++ b/client/.oldcli/cli/CMakeLists.txt
@@ -4,8 +4,15 @@ set(HDRS
  
 set(SRCS
       chessCli.cpp
+      generateMoves.cpp
+      removeCastle.cpp
+      check.cpp
+      checkMate.cpp
+      addPieceMoves.cpp
       processMessageSingle.cpp
       processMessageConnected.cpp
+      boardClickedSingle.cpp
+      chessMoves.cpp
 )
 
 add_library(ChessCli ${HDRS} ${SRCS})
