--- a/shared/engine/CMakeLists.txt
+++ b/shared/engine/CMakeLists.txt
@@ -4,7 +4,13 @@ set(HDRS
  
 set(SRCS
       chessEngine.cpp
+      generateMoves.cpp
+      removeCastle.cpp
+      check.cpp
+      checkMate.cpp
+      addPieceMoves.cpp
+      boardClickedSingle.cpp
+      chessMoves.cpp
 )
 
 add_library(ChessEngine ${HDRS} ${SRCS})
-
