--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -9,9 +9,10 @@ set(SRCS
 
 
 add_executable(ChessClient ${HDRS} ${SRCS})
-target_link_libraries(ChessClient ChessNet ChessCli ChessGui ${Boost_LIBRARIES})
+target_link_libraries(ChessClient ChessNet ChessCli ChessGui ChessUci ${Boost_LIBRARIES})
 
 add_subdirectory(gui)
 add_subdirectory(cli)
 add_subdirectory(net)
+add_subdirectory(uci)
 
